# tinyswift

./: .gitignore  CMakeLists.txt  README.md
include/swift/: Config.h  Strings.h
include/swift/Basic/: Algorithm.h  ArrayRefView.h  AssertImplements.h  BlotMapVector.h  BlotSetVector.h  Cache.h  CharInfo.h  ClusteredBitVector.h  ColorUtils.h  Compiler.h  Defer.h  Demangle.h  DemangleNodes.def  DemangleWrappers.h  Demangler.h  DiagnosticConsumer.h  DiagnosticOptions.h  DiverseList.h  DiverseStack.h  Dwarf.h  Edit.h  EditorPlaceholder.h  EncodedSequence.h  Fallthrough.h  FileSystem.h  FlaggedPointer.h  ImmutablePointerSet.h  JSONSerialization.h  LLVM.h  LLVMContext.h  LLVMInitialize.h  LangOptions.h  Lazy.h  Malloc.h  Mangler.h  ManglingMacros.h  ManglingUtils.h  NullablePtr.h  OptionSet.h  OptionalEnum.h  (+31 more)
lib/Basic/: CMakeLists.txt  Cache.cpp  ClusteredBitVector.cpp  Demangle.cpp  DemangleWrappers.cpp  Demangler.cpp  DiagnosticConsumer.cpp  DiverseStack.cpp  Edit.cpp  EditorPlaceholder.cpp  FileSystem.cpp  JSONSerialization.cpp  LLVMContext.cpp  LangOptions.cpp  Mangler.cpp  ManglingUtils.cpp  PartsOfSpeech.def  Platform.cpp  PrefixMap.cpp  PrettyStackTrace.cpp  PrimitiveParsing.cpp  Program.cpp  Punycode.cpp  PunycodeUTF8.cpp  QuotedString.cpp  Remangle.cpp  Remangler.cpp  SourceLoc.cpp  StringExtras.cpp  TaskQueue.cpp  ThreadSafeRefCounted.cpp  UUID.cpp  Unicode.cpp  Version.cpp
lib/Basic/TaskQueue/: TaskQueue.inc
lib/Basic/TaskQueue/Unix/: TaskQueue.inc
